Fix hud on iPhone < 6. Closes #1019

--- a/app/assets/client/css/hud.scss
+++ b/app/assets/client/css/hud.scss
@@ -21,7 +21,7 @@
     }
 
     .number {
-        font-size: 10pt;
+        font-size: 8pt;
 
         letter-spacing: .05em;
         font-weight: 600;
